fix overflow rev.1

--- a/src/components/tecnologies/tecnologies.css
+++ b/src/components/tecnologies/tecnologies.css
@@ -78,7 +78,7 @@
     align-items: center;
     margin: 0px;
     background-color: white;
-    overflow-x: hidden;
+
   }
 
   .gridContainer {
